--- a/Translator.iOS/Info.plist
+++ b/Translator.iOS/Info.plist
@@ -24,14 +24,8 @@
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
 	<string>Translator</string>
-	<key>CFBundleIdentifier</key>
-	<string>test.Translator</string>
-	<key>CFBundleVersion</key>
-	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
-	<key>CFBundleName</key>
-	<string>Translator</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>NSMicrophoneUsageDescription</key>
@@ -40,5 +34,13 @@
 	<string>Allow TranslatorApp to access speech recognition?</string>
 	<key>Custom Property</key>
 	<string></string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.MCW.TransApp</string>
+	<key>CFBundleName</key>
+	<string>TransApp</string>
+	<key>CFBundleVersion</key>
+	<string>1</string>
 </dict>
 </plist>
